--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 tokio={version="1.38.0", features=["full"]}
+futures="0.3.30"
 rayon="1.10.0"
-serde={version="1.0.204"}
+serde={version="1.0.204", features=["derive"]}
+serde_json="1.0.120"
 reqwest="0.12.5"
+image="0.25.1"
 
